footer, remove divider hr on last article

--- a/playground/playground-web/responsivebook/ch4-flex/sticky-footer/index.html
+++ b/playground/playground-web/responsivebook/ch4-flex/sticky-footer/index.html
@@ -8,45 +8,34 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-<div class="MainContent">
-    Here is a bunch of text up at the top. But there isn't enough
-    content to
-    push the footer to the bottom of the page.
+<div id="root">
+    <div class="App">
+        <header> some header</header>
+        <main class="MainContent">
+            <div class="MainContent">
+                Here is a bunch of text up at the top. But there isn't enough
+                content to
+                push the footer to the bottom of the page.
+            </div>
+            <div class="MainContent">
+                Here is a bunch of text up at the top. But there isn't enough
+                content to
+                push the footer to the bottom of the page.
+            </div>
+            <div class="MainContent">
+                Here is a bunch of text up at the top. But there isn't enough
+                content to
+                push the footer to the bottom of the page.
+            </div>
+        </main>
+
+        <footer class="Footer">
+            However, thanks to flexbox, I've been put in my place. But not overlay main content if its effective height exceeds
+            viewport's height.
+        </footer>
+    </div>
+
 </div>
-<div class="MainContent">
-    Here is a bunch of text up at the top. But there isn't enough
-    content to
-    push the footer to the bottom of the page.
-</div><div class="MainContent">
-    Here is a bunch of text up at the top. But there isn't enough
-    content to
-    push the footer to the bottom of the page.
-</div>
-<div class="MainContent">
-    Here is a bunch of text up at the top. But there isn't enough
-    content to
-    push the footer to the bottom of the page.
-</div><div class="MainContent">
-    Here is a bunch of text up at the top. But there isn't enough
-    content to
-    push the footer to the bottom of the page.
-</div>
-<div class="MainContent">
-    Here is a bunch of text up at the top. But there isn't enough
-    content to
-    push the footer to the bottom of the page.
-</div><div class="MainContent">
-    Here is a bunch of text up at the top. But there isn't enough
-    content to
-    push the footer to the bottom of the page.
-</div>
-<div class="MainContent">
-    Here is a bunch of text up at the top. But there isn't enough
-    content to
-    push the footer to the bottom of the page.
-</div>
-<div class="Footer">
-    However, thanks to flexbox, I've been put in my place. But not overlay main content if its effective height exceeds viewport's height.
-</div>
+
 </body>
 </html>
